[package]
name = "repl"
version = "0.1.0"
description = "an Read-Eval-Print-Loop implementation"
authors = ["himself65 <himself65@outlook.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen="0.2.60"

[dev-dependencies]
wasm-bindgen-test="0.3.10"